# Numenos-exercise

./: .gitignore  README.md  main_exercise.ipynb  mytrust_example1_test.sh  mytrust_example_test.sh  pyproject.toml
Docs/: TRUST4_exercise.docx
Output/: TRUST_SRR28479473_airr.tsv  TRUST_SRR28479473_airr_align.tsv  TRUST_SRR28479473_annot.fa  TRUST_SRR28479473_cdr3.out  TRUST_SRR28479473_report.tsv  TRUST_SRR28479474_airr.tsv  TRUST_SRR28479474_airr_align.tsv  TRUST_SRR28479474_annot.fa  TRUST_SRR28479474_assembled_reads.fa  TRUST_SRR28479474_cdr3.out  TRUST_SRR28479474_final.out  TRUST_SRR28479474_report.tsv  TRUST_SRR28479475_airr.tsv  TRUST_SRR28479475_airr_align.tsv  TRUST_SRR28479475_annot.fa  TRUST_SRR28479475_cdr3.out  TRUST_SRR28479475_report.tsv  TRUST_example_airr.tsv  TRUST_example_airr_align.tsv  TRUST_example_annot.fa  TRUST_example_assembled_reads.fa  TRUST_example_cdr3.out  TRUST_example_final.out  TRUST_example_raw.out  TRUST_example_report.tsv  TRUST_example_toassemble_1.fq  TRUST_example_toassemble_2.fq
Tools/sratoolkit.3.2.1/: CHANGES
example/Output/: TRUST_example_1_airr_align.tsv  TRUST_example_1_annot.fa  TRUST_example_1_cdr3.out  TRUST_example_1_final.out  TRUST_example_1_raw.out  TRUST_example_1_report.tsv  TRUST_example_1_toassemble_1.fq  TRUST_example_1_toassemble_2.fq  TRUST_example_report.tsv
