[project]
name = "trust4Pipeline"
version = "0.1.0"
description = "TRUST4 Pipeline Exercise"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["E501", "N", "R", "I"]
ignore = []